--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 
 } */
 .nav-link {
-  color: inherit;
+  color: unset;
 }
 #footer {
   /*position: bottom;*/
@@ -23,4 +23,20 @@
   padding: 0px;
   width: 100%;
   height: 100vh;
+}
+@media only screen and (max-width: 600px) {
+  .wraplist {
+    flex-direction: column;
+  }
+  .iconNav {
+    position: absolute;
+    top: 3%;
+    left: 10%;
+  }
+  .iconNav2 {
+    position: absolute;
+    top: 3%;
+    right: 5%;
+  }
+
 }
