--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,68 @@
   width: 100%;
   height: 100vh;
 }
+
+/* ---------------Navbar responsivness --------------------------*/
+@media only screen and (max-width: 1000px) and (min-width:800px) {
+  .wraplist {
+    flex-direction: column;
+  }
+  .iconNav {
+    position: absolute;
+    top: 3%;
+    left: 5%;
+  }
+  .iconNav2 {
+    position: absolute;
+    top: 3%;
+    left: 15%;
+  }
+  .iconNav3 {
+    position: absolute;
+    top: 7%;
+    right: 5%;
+  }
+}
+@media only screen and (max-width: 800px) and (min-width:700px) {
+  .wraplist {
+    flex-direction: column;
+  }
+  .iconNav {
+    position: absolute;
+    top: 3%;
+    left: 10%;
+  }
+  .iconNav2 {
+    position: absolute;
+    top: 3%;
+    left: 20%;
+  }
+  .iconNav3 {
+    position: absolute;
+    top: 7%;
+    right: 5%;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width:600px) {
+  .wraplist {
+    flex-direction: column;
+  }
+  .iconNav {
+    position: absolute;
+    top: 3%;
+    left: 10%;
+  }
+  .iconNav2 {
+    position: absolute;
+    top: 3%;
+    left: 24%;
+  }
+  .iconNav3 {
+    position: absolute;
+    top: 7%;
+    right: 5%;
+  }
+}
 @media only screen and (max-width: 600px) {
   .wraplist {
     flex-direction: column;
