--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,21 +9,11 @@
 .nav-link {
   color: unset;
 }
-#footer {
-  /*position: bottom;*/
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  margin-top: auto;
-  text-align: center;
-  flex: 0 0 auto; /*add*/
+#root{
+  height: fit-content;
 }
-#mainsection {
-  min-height: 100%;
-  padding: 0px;
-  width: 100%;
-  height: 100vh;
-}
+
+
 
 /* ---------------Navbar responsivness --------------------------*/
 @media only screen and (max-width: 1000px) and (min-width:800px) {
