--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,17 @@
 @import "~mdb-ui-kit/css/mdb.min.css";
-/* body.bootstrap-dark {
-  margin: 0;
-  color: #c5c4c4;
-  text-align: left;
-  background-color: #283a4d;
 
-} */
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap');
+ 
+
 .nav-link {
   color: unset;
 }
 #root{
   height: fit-content;
+  
+}
+*{
+  font-family: 'Zen Maru Gothic', sans-serif;
 }
 
 
